[project]
name = "cache-aside"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "black>=26.1.0",
    "fastapi[standard]>=0.135.1",
    "flake8>=7.3.0",
    "httpx>=0.28.1",
    "isort>=8.0.1",
    "pytest>=9.0.2",
    "redis>=7.2.1",
    "sqlmodel>=0.0.37",
]

[dependency-groups]
dev = [
    "black>=26.1.0",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "ruff>=0.15.5",
]
